@@ -1,6 +1,7 @@
 Trunk:
 - correct misleading namespace in PrepareToGetRequestStatus
 - correct a timeout issue related to exponential backoff system in put/get
+- improve reliability of the exponential backoff wait system
 
 Fri Jul 20 2012 Adrien Devresse <adevress at cern.ch> - 1.13.0-0
  - Synchronise with EMI 2 Update 13
